--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,21 +27,21 @@ jobs:
         run: |
           docker compose down || true
 
-      # - name: Create persistent data directory and symlink
-      #   run: |
-      #     sudo mkdir -p /usr/src/vn_club_bot/data
-      #     sudo chown $USER:$USER /usr/src/vn_club_bot/data
-      #     rm -rf ./data
-      #     ln -s /usr/src/vn_club_bot/data ./data
+      - name: Create persistent data directory and symlink
+        run: |
+          sudo mkdir -p /usr/src/vn_club_bot/data
+          sudo chown $USER:$USER /usr/src/vn_club_bot/data
+          rm -rf ./data
+          ln -s /usr/src/vn_club_bot/data ./data
 
-      # - name: Build Docker image
-      #   run: |
-      #     docker build -t discord-vn-club-bot .
+      - name: Build Docker image
+        run: |
+          docker build -t discord-vn-club-bot .
 
-      # - name: Run Docker container
-      #   run: |
-      #     docker compose up -d
+      - name: Run Docker container
+        run: |
+          docker compose up -d
 
-      # - name: Clean up unused Docker images
-      #   run: |
-      #     docker image prune -f
+      - name: Clean up unused Docker images
+        run: |
+          docker image prune -f
